# procon26

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  format.sh
include/: common.hpp  gv.hpp
main/: solver.cpp
submit_tool/: _init.sh  conf.sh  get.sh  run.sh  submit.sh
